--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/native-storage": "^4.20.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-cache": "git+https://github.com/tiltshiftfocus/cordova-plugin-cache.git",
     "cordova-plugin-device": "^2.0.2",
@@ -33,6 +33,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "2.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -52,7 +53,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "org.apache.cordova.plugin.cache": {}
+      "org.apache.cordova.plugin.cache": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios"
