--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/app-rate": "^4.12.2",
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/in-app-browser": "^4.20.0",
     "@ionic-native/native-storage": "^4.20.0",
@@ -27,10 +28,14 @@
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "^2.2.0",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-apprate": "1.4.0",
     "cordova-plugin-cache": "git+https://github.com/tiltshiftfocus/cordova-plugin-cache.git",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "2.0.1",
+    "cordova-plugin-globalization": "1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -57,7 +62,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "org.apache.cordova.plugin.cache": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-apprate": {}
     },
     "platforms": [
       "ios"
